--- a/Projeto1_PHI_id04.qsf
+++ b/Projeto1_PHI_id04.qsf
@@ -39,7 +39,7 @@
 
 set_global_assignment -name FAMILY "Cyclone V"
 set_global_assignment -name DEVICE 5CGXFC7C7F23C8
-set_global_assignment -name TOP_LEVEL_ENTITY top_display_duplo
+set_global_assignment -name TOP_LEVEL_ENTITY tb_top_display_duplo
 set_global_assignment -name ORIGINAL_QUARTUS_VERSION 17.0.0
 set_global_assignment -name PROJECT_CREATION_TIME_DATE "14:51:49  JUNE 08, 2025"
 set_global_assignment -name LAST_QUARTUS_VERSION "17.0.0 Lite Edition"
@@ -53,9 +53,6 @@ set_global_assignment -name EDA_OUTPUT_DATA_FORMAT VHDL -section_id eda_simulati
 set_global_assignment -name VHDL_FILE top_display_duplo.vhd
 set_global_assignment -name VHDL_FILE display_segments_seven.vhd
 set_global_assignment -name VHDL_FILE tb_top_display_duplo.vhd
-set_global_assignment -name PARTITION_NETLIST_TYPE SOURCE -section_id Top
-set_global_assignment -name PARTITION_FITTER_PRESERVATION_LEVEL PLACEMENT_AND_ROUTING -section_id Top
-set_global_assignment -name PARTITION_COLOR 16764057 -section_id Top
 set_global_assignment -name POWER_PRESET_COOLING_SOLUTION "23 MM HEAT SINK WITH 200 LFPM AIRFLOW"
 set_global_assignment -name POWER_BOARD_THERMAL_MODEL "NONE (CONSERVATIVE)"
 set_global_assignment -name EDA_TEST_BENCH_ENABLE_STATUS TEST_BENCH_MODE -section_id eda_simulation
@@ -65,4 +62,7 @@ set_global_assignment -name EDA_DESIGN_INSTANCE_NAME NA -section_id tb_top_displ
 set_global_assignment -name EDA_TEST_BENCH_RUN_SIM_FOR "20 us" -section_id tb_top_display_duplo
 set_global_assignment -name EDA_TEST_BENCH_MODULE_NAME tb_top_display_duplo -section_id tb_top_display_duplo
 set_global_assignment -name EDA_TEST_BENCH_FILE tb_top_display_duplo.vhd -section_id tb_top_display_duplo
+set_global_assignment -name PARTITION_NETLIST_TYPE SOURCE -section_id Top
+set_global_assignment -name PARTITION_FITTER_PRESERVATION_LEVEL PLACEMENT_AND_ROUTING -section_id Top
+set_global_assignment -name PARTITION_COLOR 16764057 -section_id Top
 set_instance_assignment -name PARTITION_HIERARCHY root_partition -to | -section_id Top
